--- a/cv.html
+++ b/cv.html
@@ -59,7 +59,8 @@
                                             <h4><a href="https://www.stmarksschool.org/" class="underline-cv-page">ST. MARK'S SCHOOL</a></h4>
                                             <p>Selected to do a research on theoretical computer science at Taft STEM Fellowship program</p>
                                             <p>Chosen to participate at Lion's Roam experiential learning course with trips to South Africa and Southern US</p>
-                                            <p>Co-head of the International Student Connection Affinity Group</p>
+                                            <p>Varsity Cross-Country Runner, top 4 on the team</p>
+                                            <p>Founder of CypherCode Computer Science Club, Co-head of the International Student Connection Affinity Group</p>
                                         </li>
                                         <li class="event" data-date="2016-2020">
                                             <h4>IVANO-FRANKIVSK ACADEMICAL LYCEUM</h4>
