--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                 </div>
                 <div class="personal-social">
                     <span>
-                        <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
+                        <a href="https://www.facebook.com/veronika.kitsul"><img src="fb.svg"></a>
                         </span>
                     <span>
-                        <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
+                        <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lnkd.svg"></a>
                     </span>
                     <span>
-                        <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
+                        <a href="https://github.com/Veronika-Kitsul"><img src="gt.svg"></a>
                     </span>
                 </div>
             </div>
