--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,29 @@
         </div>
     </div>
 
+    <div class="ul-list-menu-fixed" style="margin-left: 40px; height: 40px">
+        <ul>
+            <li>
+                <a href="#social">
+                    <span>SOCIAL</span>
+                </a>
+            </li>
+            <li>
+                <a href="#cs">
+                    <span>COMPUTER SCIENCE</span>
+                </a>
+            </li>
+            <li>
+                <a href="#arts">
+                    <span>ARTS</span>
+                </a>
+            </li>
+    </div>
+
     <div class="visit-card">
         <div class="media-body">
             <div class="media-body-container">
-                <div class="project-text">
+                <div class="project-text" id="social">
                     <h4>CRUELTY FREE SOCIAL MEDIA BOT "TurBOTa"</h4>
                     <p>
                         After researching a tool to help people find information about cruelty free brands, me and my friend Polly realized there is no place you would go to search for it as a Ukrainian looking for details on animal testing in local brands. So as a team of enthusiasts
@@ -61,7 +80,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="bot.jpeg" type="image/jpg" width="650px" height="550px">
+                    <embed src="bot.jpeg" type="image/jpg" width="550px" height="550px">
                 </div>
             </div>
         </div>
@@ -70,7 +89,7 @@
     <div class="visit-card">
         <div class="media-body">
             <div class="media-body-container">
-                <div class="project-text">
+                <div class="project-text" id="cs">
                     <h4>SOLVING THE KNAPSACK PROBLEM WITH VARIATIONAL QUANTUM EIGENSOLVER ALGORITHM</h4>
                     <p>
                         The Knapsack Problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the
@@ -81,7 +100,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Knapsack VQE.pdf" type="application/pdf" width="650px" height="500px">
+                    <embed src="Knapsack VQE.pdf" type="application/pdf" width="550px" height="550px">
                 </div>
             </div>
         </div>
@@ -99,7 +118,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
+                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="550px" height="500px">
                 </div>
             </div>
         </div>
@@ -119,7 +138,43 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Bouncy.png" type="image/png" width="650px" height="500px">
+                    <embed src="Bouncy.png" type="image/png" width="550px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text" id="arts">
+                    <h4>POETRY COLLECTION</h4>
+                    <p>
+                        I've started writing poetry in Ukrainian when I was seven. I don't allocate a lot of time to work on my pieces, they are usually spontaneous and expressive. I derive my style from Ukrainian poet Yurii Izdryk who writes rhymed stanzas, where scientific
+                        concepts are intertwined with more abstract human feelings. I also have a couple of poems in Russian, and I started writing my pieces in English in 2019. Here I include a sample of my English poems.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
+                    <h4>ELECTRICAL CIRCUITS MUSIC PIECE</h4>
+                    <p>
+                        I have started playing guitar at the beginning of the 2021. Over the summer, I improvized and came up with the chord progression, for which I later wrote lyrics. My guitar teacher at St. Mark's helped me record it and make a coherent piece, adding bass
+                        guitar and drums.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="500px">
                 </div>
             </div>
         </div>
