--- a/stem.html
+++ b/stem.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li>
                         <a href="#about">
-                            <span>ABOUNT</span>
+                            <span>ABOUT</span>
                         </a>
                     </li>
                     <li>
@@ -79,14 +79,14 @@
 
             <div class="stem-text">
                 <h4 id="about">ABOUT</h4>
-                <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project will be something
-                    in the realm in Cryptography, the science of communication security.
+                <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project is focusing on
+                    cybersecurity in the Internet of Things Devices.
                 </p>
                 <br>
 
                 <h4 id="initial">INITIAL PLAN</h4>
-                <p>Chaos Theory was discoverec by Lorenz in 1960s when he studied weather patterns. Lorenz noticed that starting with slightly different initial conditions totally changed how the patterns developed and one could not predict in what direction
-                    would it move. That is why synoptics are not able to predict weather with a 100% precision — it is chaotical. Another famous example of the Chaos Theory is the Butterfly Effect — butterfly's fly in Brasil can cause a rainstorm in China,
+                <p>Chaos Theory was discovered by Lorenz in 1960s, when he studied weather patterns. Lorenz noticed that starting with slightly different initial conditions totally changed how the patterns developed and one could not predict in what direction
+                    it would move. That is why synoptics are not able to predict weather with a 100% precision — it is chaotical. Another famous example of the Chaos Theory is the Butterfly Effect — butterfly's fly in Brasil can cause a rainstorm in China,
                     though this is a bit exagerrated, it gives a good understanding of the concept of Chaos Theory. Because Chaos is so unpredictable, there were thoughts of using it in Cryptography to obtain truly random encryption of messages that are
                     believed to be 100% unhackable.</p>
                 <br>
@@ -141,7 +141,7 @@
                     create a Machine Learning model of traffic masking to automize Luc's work. Mr. Bauer suggested I talk to Luc and hear what does he have to say, and if he worked on it after the Fellowship in any way. I can also try talking to Mr. Host
                     and asking how am I going to collect so much traffic. One way is for me to collect it from the devices I would test but it's going to take too much time, so it would be easier to find open source traffic or ask if we can extract if
                     from the school's network (which is not a good way to do it, I believe).</p>
-                <p>Now I would need to ask Jocelym if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
+                <p>Now I would need to ask Jocelyn if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
                 <br>
 
                 <h4 id="october">OCTOBER</h4>
