--- a/projects.html
+++ b/projects.html
@@ -128,6 +128,26 @@
         <div class="media-body">
             <div class="media-body-container">
                 <div class="project-text">
+                    <h4>KEVIN BACON GAME</h4>
+                    <p>
+                        Welcome to the Kevin Bacon Game! It contains a huge database of actors and movies, so you can play around with their connections. You have two text fields to enter two actors, and you can perform three operations on them. First, you can find the shortest
+                        path from one actor to another through movies they stage in and common colleagues. For the second one, you only need one actor, and even if you input two, we will run the search for for the farthest actor in the map for just the
+                        first one. The third feature is to show three shortest paths how to get from the first actor to the second one. Names of the actors have to be their real names inputted correctly. The program will ask you to try again if you input
+                        the name incorrectly. The application comes in two color themes: standart white and custom pink. The game is build upon the graph alogirthm Breadth First Search on Java. <b>Click anywhere on the picture to see GitHub code!</b>
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <a href="https://github.com/Veronika-Kitsul/KevinBaconGame"><embed src="KevinBacon.jpg" type="image/jpg" width="550px" height="550px"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
                     <h4>BOUNCY GAME WITH JAVA GRAPHICS</h4>
                     <p>
                         This is a simple Bouncy Game on Java. At the start of the game you are given a ball on a petal and several blocks up above that you have to break through. The ball will automatically start bouncing back and forth, and once it hits any of the blocks --
@@ -179,6 +199,20 @@
             </div>
         </div>
     </div>
+
+    <!-- Default Statcounter code for Personal Website
+    https://veronika-kitsul.github.io/ -->
+    <script type="text/javascript">
+        var sc_project = 12670791;
+        var sc_invisible = 1;
+        var sc_security = "d5a18111";
+    </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript><div class="statcounter"><a title="website statistics"
+        href="https://statcounter.com/" target="_blank"><img class="statcounter"
+        src="https://c.statcounter.com/12670791/0/d5a18111/1/" alt="website statistics"
+        referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
 </body>
 
 </html>
