--- a/cv.html
+++ b/cv.html
@@ -90,8 +90,8 @@
                                             <p>3rd prize winner of the National Stage of Research Competition at Junior Academy of Sciences of Ukraine in Experimental Physics (out of 7983 participants)</p>
                                         </li>
                                         <li class="event" data-date="present">
-                                            <h4>CURRENT RESEARCH</h4>
-                                            <p>Conducting a research project as part of the Taft STEM Fellowship course at St. Mark's School on Chaotic Electrical Circuits in Cryptography</p>
+                                            <h4><a href="stem.html" class="underline-cv-page">CURRENT RESEARCH</a></h4>
+                                            <p>Conducting a research project as part of the Taft STEM Fellowship course at St. Mark's School on Cybersecurity in Internet of Things devices</p>
                                             <p>History Fellowship on Space Race Policital Cartoons in the US and USSR</p>
                                         </li>
                                         <li class="event" data-date="2019">
