--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Knapsack VQE.pdf" type="application/pdf" width="550px" height="550px">
+                    <embed src="Knapsack VQE.pdf" type="application/pdf" width="550px" height="500px">
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="550px" height="500px">
+                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="550px" height="450px">
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <a href="https://github.com/Veronika-Kitsul/KevinBaconGame"><embed src="KevinBacon.jpg" type="image/jpg" width="550px" height="550px"></a>
+                    <a href="https://github.com/Veronika-Kitsul/KevinBaconGame"><embed src="KevinBacon.jpg" type="image/jpg" width="550px" height="530px"></a>
                 </div>
             </div>
         </div>
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Bouncy.png" type="image/png" width="550px" height="500px">
+                    <embed src="Bouncy.png" type="image/png" width="550px" height="550px">
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="500px">
+                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="450px">
                 </div>
             </div>
         </div>
@@ -189,12 +189,12 @@
                     <h4>ELECTRICAL CIRCUITS MUSIC PIECE</h4>
                     <p>
                         I have started playing guitar at the beginning of the 2021. Over the summer, I improvized and came up with the chord progression, for which I later wrote lyrics. My guitar teacher at St. Mark's helped me record it and make a coherent piece, adding bass
-                        guitar and drums.
+                        guitar and drums. It will be on Spotify soon, but for now <b>click anywhere on the picture to hear it!</b>
                     </p>
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="500px">
+                    <a href="https://drive.google.com/file/d/1bn00SkwVXx4wqMMYdsNRR6rSgSYaUu__/view?usp=sharing"><embed src="label.jpg" type="image/jpg" width="550px" height="450px"></a>
                 </div>
             </div>
         </div>
