--- a/stem.html
+++ b/stem.html
@@ -74,6 +74,11 @@
                             <span>OCTOBER</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#nov">
+                            <span>NOVEMBER</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -158,6 +163,15 @@
                 <p>I've read through one of the papers sent by Kevin and I think this would be an interesting research topic. The paper talks about creating a fine-labeled dataset of IoT traffic events from distinct gadgets. They also see a viable path of
                     using it now to perform Machine Learning on this dataset to train the model to identify what device left the traffic and what event it was. In any case, I think investigation IoT traffic would be feasible and interesting; Luc's paper
                     also was on it. </p>
+
+
+                <h4 id="nov">NOVEMBER</h4>
+
+                <p>I emailed the research doc to Kevin so we can have a common place to store information about the research. I also think we should set on the topic as soon as possible. He suggested I read through another paper that develops new TAP based
+                    on IFTTT. I liked the paper but it looks very complicated and troublesome. After talking to Kevin on the first Wednesday of the month, I realized that we can either do SoK or develop a new TAP. The second one sounds much more exciting,
+                    it works on cryptography as I initially wanted, and I will learn much more. Therefore, despite that it's very hard and I don't know a lot about cryptography, I will do it. We decided that even if we do design of such platform, it is
+                    already a big contribution to the sphere. I learned how to work with LaTeX on my laptop through command lines in terminal window, and am working my way through Cryptography I. Me and Kevin also need to read the paper more to start
+                    writing out design elements we need to have. </p>
             </div>
         </div>
     </div>
