--- a/stem.html
+++ b/stem.html
@@ -79,6 +79,11 @@
                             <span>NOVEMBER</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#dec">
+                            <span>DECEMBER</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -173,6 +178,38 @@
                     it works on cryptography as I initially wanted, and I will learn much more. Therefore, despite that it's very hard and I don't know a lot about cryptography, I will do it. We decided that even if we do design of such platform, it is
                     already a big contribution to the sphere. I learned how to work with LaTeX on my laptop through command lines in terminal window, and am working my way through Cryptography I. Me and Kevin also need to read the paper more to start
                     writing out design elements we need to have. </p>
+                <p>I keep writing my background research section as I do more research. I've also chosen to work with Rust for the project and outlined the reasons for that in my lab journal. In the Thanksgiving break week I met with my mentor at MIT lab
+                    and went over some design details. We also built a preliminary timeline in the GitHub rep.</p>
+
+                <h3>Preliminary Timeline:</h3>
+                <ul>
+                    <li>Week 1 (of Mon Nov 22)</li>
+                    <ol>
+                        <li>Background finish what I can</li>
+                        <li>High-level design overview</li>
+                    </ol>
+                    <li>Week 2 (of Mon Nov 29)</li>
+                    <ol>
+                        <li>Required crypto protocols</li>
+                        <li>Protocol flow = UML sequence diagram</li>
+                    </ol>
+                    <li>Week 3 (of Mon Dec 6)</li>
+                    <ol>
+                        <li>Security Analysis</li>
+                        <li>Specify privacy and functionality goals</li>
+                        <li>Start security proofs</li>
+                    </ol>
+                    <li>Week 4 (of Mon Dec 13)</li>
+                    <ol>
+                        <li>Implementation details: software</li>
+                    </ol>
+                </ul>
+
+                <br>
+                <h4 id="dec">DECEMBER</h4>
+
+                <p>On December 1st I had another meeting with my mentor. We talked a lot about the design and outlined a quite detailed plan for it. It's all looking quite well so far. I will be learning how to draw in LaTeX and read more on Multi-party
+                    communication (MPC). </p>
             </div>
         </div>
     </div>
