--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <a href="stem.html">
-                        <span>STEM Research Fellowship</span>
+                        <span>RESEARCH</span>
                     </a>
                 </li>
             </ul>
@@ -53,11 +53,12 @@
             <div class="personal-text">
                 <h3>Veronika Kitsul</h3>
                 <p>
-                    Welcome! I am a senior at <a href="https://www.stmarksschool.org/"><mark>St. Mark's School.</mark></a> I am interested in Physics, Computer Science, Math, and Sustainability. I am an avid researcher and love exploring everything new
-                    from Space Race political cartoons to quantum computing.
+                    Welcome! I am a rising freshman at <a href="https://www.princeton.edu/"><mark>Princeton University</mark></a> with prospective concentration in either Physics or Electrical and Computer Engineering. I am an avid researcher and love
+                    exploring everything new from Space Race political cartoons to quantum computing.
                 </p>
                 <p>
-                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
+                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar, run cross-country, play tennis or hockey in
+                    my free time.
                 </p>
                 <p>
                     Feel free to browse through my website to learn more about me!
