--- a/stem.html
+++ b/stem.html
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <a href="stem.html" id="stem">
-                        <span>STEM Research Fellowship</span>
+                        <span>RESEARCH</span>
                     </a>
                 </li>
             </ul>
