--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             <div class="personal-text">
                 <h3>Veronika Kitsul</h3>
                 <p>
-                    Welcome! I am a rising freshman at <a href="https://www.princeton.edu/"><mark>Princeton University</mark></a> with prospective concentration in either Physics or Electrical and Computer Engineering. I am an avid researcher and love
-                    exploring everything new from Space Race political cartoons to quantum computing.
+                    Welcome! I am a freshman at <a href="https://www.princeton.edu/"><mark>Princeton University</mark></a>, concentraing in Electrical and Computer Engineering with a focus on Security and Privacy I am an avid researcher and love exploring
+                    everything from Space Race political cartoons to quantum computing.
                 </p>
                 <p>
-                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar, run cross-country, play tennis or hockey in
-                    my free time.
+                    Non-academically, I am an animal welfare activist, and led a team of volunteers that developed the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). I lead the team for two years and we suspended our processes at the start of russian invasion of Ukraine. Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist,
+                    and mentor. This past year, I was a co-head mentor leading a group of over 20 Ukrainian students applying to colleges. I enjoy running, playing board games, travelling, and exploring music.
                 </p>
                 <p>
                     Feel free to browse through my website to learn more about me!
