--- a/stem.html
+++ b/stem.html
@@ -47,169 +47,22 @@
 
     <div class="visit-card">
         <div class="media-body">
-            <div class="ul-list-menu-fixed">
-                <ul>
-                    <li>
-                        <a href="#about">
-                            <span>ABOUT</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#initial">
-                            <span>INITIAL PLAN</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#summer">
-                            <span>SUMMER WORK</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#september">
-                            <span>SEPTEMBER</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#october">
-                            <span>OCTOBER</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#nov">
-                            <span>NOVEMBER</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#dec">
-                            <span>DECEMBER</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <div class="media-body-container">
+                <div class="project-text" id="social">
+                    <h4>ACACIA: A Practical, Privacy-Preserving Trigger-Action Platform using Multi-Party Computation</h4>
+                    <p>
+                        After researching a tool to help people find information about cruelty free brands, me and my friend Polly realized there is no place you would go to search for it as a Ukrainian looking for details on animal testing in local brands. So as a team of enthusiasts
+                        from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
+                        additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
+                        If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
+                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I am leading the team of eight teenagers who are excited to work for it for already
+                        1.5 years.
+                    </p>
+                </div>
 
-            <div class="stem-text">
-                <h4 id="about">ABOUT</h4>
-                <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project is focusing on
-                    cybersecurity in the Internet of Things Devices.
-                </p>
-                <br>
-
-                <h4 id="initial">INITIAL PLAN</h4>
-                <p>Chaos Theory was discovered by Lorenz in 1960s, when he studied weather patterns. Lorenz noticed that starting with slightly different initial conditions totally changed how the patterns developed and one could not predict in what direction
-                    it would move. That is why synoptics are not able to predict weather with a 100% precision — it is chaotical. Another famous example of the Chaos Theory is the Butterfly Effect — butterfly's fly in Brasil can cause a rainstorm in China,
-                    though this is a bit exagerrated, it gives a good understanding of the concept of Chaos Theory. Because Chaos is so unpredictable, there were thoughts of using it in Cryptography to obtain truly random encryption of messages that are
-                    believed to be 100% unhackable.</p>
-                <br>
-
-                <h4 id="summer">SUMMER WORK</h4>
-                <p>Every STEM Fellow does summer work before the fall they start their project. My summer work consisted of several things:
-                </p>
-                <ul>
-                    <li>Research Papers
-                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-                            <li style="margin-left:2em">I've read through about seven research papers that are tangible to chaotical cryptography and chaotic electronic circuits that can be used to generate truly random keys. However, all of the papers date back to 1990-2000ss,
-                                and I can't find what happened afterwards, why nobody works on it futher. One possible reason is that scientists then saw it does not have real-world application just yet.</li>
-                            <li style="margin-left:2em">I also maintain a big Google Sheet of all the papers/articles I worked with to keep track of everything. Each research paper has its own ID number there, and I mark it on the printed versions, summaries, and start their name
-                                on the drive with that number.</li>
-                        </ol>
-                    </li>
-
-                    <li>Linear Algebra class</li>
-                    <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-                        <li style="margin-left:2em">Papers on Chaos Theory in Cryptography that I read required decent understanding of very high-level math and physics, especially electronics. Therefore, I took on Linear Algebra course at Stanford Pre-Collegiate Studies to be more
-                            comfortable with the math notation and concepts mentioned in the research papers. </li>
-                    </ol>
-
-                    <li>Quantum Computing Online-School
-                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-                            <li style="margin-left:2em">I took a Quantum Computing course to introduce myself to the field. We talked about the very basics of the sphere, how Quantum is different from Classical, and also touched upon Cryptography. I learned about Grover's Algorithm,
-                                Quantum Key Distribution, and also some of the hybrid algorithms (ones that use both quantum and classical computers in their work).</li>
-                        </ol>
-                    </li>
-
-                    <li>Data Science and Machine Learning summer bootcamp
-                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-                            <li style="margin-left:2em">Did Data Science, Machine Learning, and Data Sciences research courses as part of a summer school. Learned to frame research papers, read them and dissect them, how to give efficient presentations and create materials for them,
-                                how to reach out for help, and how to leverage data science and machine learning for research. I've also learned a completely new computer language on a fairly high level and can work with data sets through Python libraries,
-                                as well as use statistics to analyse the results and conduct a data science research.</li>
-                        </ol>
-                    </li>
-                    <br>
-                    <img src="summer.png" width="700px">
-                </ul>
-
-                <br>
-                <h4 id="september">SEPTEMBER</h4>
-                <p>
-                    I've identified some keywords for my research project: #cryptography #security #internet_of_things
-                </p>
-                <p>
-                    Have read the guides Ms. Lohwater posted for the Massachussets Science and Engineering Fair. Have printed out all of my summer articles and summaries and nicely organized them in a binder. Last week's meeting with Mr. Bauer was not much talking but we
-                    did generate a nice idea of creating a 3D visualization of 2D boards with a source of light and computer simulations. Now I am thinking of looking for articles on this topic.
-                </p>
-                <p>Read Luc Coté's paper on Privacy Vulnerabilities within IoT Device Traffic. A lot of useful information to also make me realize that I need to read more information about tech security in general. One possible way I might take on is to
-                    create a Machine Learning model of traffic masking to automize Luc's work. Mr. Bauer suggested I talk to Luc and hear what does he have to say, and if he worked on it after the Fellowship in any way. I can also try talking to Mr. Host
-                    and asking how am I going to collect so much traffic. One way is for me to collect it from the devices I would test but it's going to take too much time, so it would be easier to find open source traffic or ask if we can extract if
-                    from the school's network (which is not a good way to do it, I believe).</p>
-                <p>Now I would need to ask Jocelyn if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
-                <br>
-
-                <h4 id="october">OCTOBER</h4>
-
-                <p>I am quite anxious about my topic selection as everything I read on the topic is not narrow or niche enough. I talked a little to Mr. Bauer and I now know I will concentrate on wireless IoT communication. Lauren offered I contact her father
-                    who works at Intel and might help me with narrowing down my topic. He replied to me with a very extensive overview of his take on current state of IoT security. He sent me a very interesting article on a vulnerability of AirTag that
-                    was discovered by an outside researcher. I think this topic would be really interesting to go down by but there is also a lot of ways to narrow it even further: I might look at Apple Watch, for example. But I also think it is fairly
-                    hard to track these vulnerabilites because I would have to test out MANY possibilities. Additionally, I can't be sure they have vulnerabilities I am capable of discovering. Conversely, I can look at Xiaomi wathches or any other less
-                    protected watches. I think I would want to focus on hardware but I think software is much easier to work with, and I know almost nothing about hardware as of now. Mr. Tran also mentioned there are some interesting ways I can go down
-                    by in software cryptography if I do some coding. </p>
-                <p>I also contacted four other people from colleges who work on cybersecurity-related research to ask if my polyalphabetic cypher idea makes any sense. I received three replies and had two zoom calls with them. One of the people I contacted
-                    agreed to be my <b>research mentor!</b> He is a Ph.D. student at MIT interested in cryptography and cybersecurity. We talked about my current research interests and he(Kevin) sent me three research papers to read through; later in
-                    the week we will discuss them and see if there is anything that sparked interest.</p>
-                <p>I've read through one of the papers sent by Kevin and I think this would be an interesting research topic. The paper talks about creating a fine-labeled dataset of IoT traffic events from distinct gadgets. They also see a viable path of
-                    using it now to perform Machine Learning on this dataset to train the model to identify what device left the traffic and what event it was. In any case, I think investigation IoT traffic would be feasible and interesting; Luc's paper
-                    also was on it. </p>
-
-
-                <br>
-                <h4 id="nov">NOVEMBER</h4>
-
-                <p>I emailed the research doc to Kevin so we can have a common place to store information about the research. I also think we should set on the topic as soon as possible. He suggested I read through another paper that develops new TAP based
-                    on IFTTT. I liked the paper but it looks very complicated and troublesome. After talking to Kevin on the first Wednesday of the month, I realized that we can either do SoK or develop a new TAP. The second one sounds much more exciting,
-                    it works on cryptography as I initially wanted, and I will learn much more. Therefore, despite that it's very hard and I don't know a lot about cryptography, I will do it. We decided that even if we do design of such platform, it is
-                    already a big contribution to the sphere. I learned how to work with LaTeX on my laptop through command lines in terminal window, and am working my way through Cryptography I. Me and Kevin also need to read the paper more to start
-                    writing out design elements we need to have. </p>
-                <p>I keep writing my background research section as I do more research. I've also chosen to work with Rust for the project and outlined the reasons for that in my lab journal. In the Thanksgiving break week I met with my mentor at MIT lab
-                    and went over some design details. We also built a preliminary timeline in the GitHub rep.</p>
-
-                <h5>Preliminary Timeline:</h5>
-                <ul>
-                    <li>Week 1 (of Mon Nov 22)</li>
-                    <ul>
-                        <li>Background finish what I can</li>
-                        <li>High-level design overview</li>
-                    </ul>
-                    <li>Week 2 (of Mon Nov 29)</li>
-                    <ul>
-                        <li>Required crypto protocols</li>
-                        <li>Protocol flow = UML sequence diagram</li>
-                    </ul>
-                    <li>Week 3 (of Mon Dec 6)</li>
-                    <ul>
-                        <li>Security Analysis</li>
-                        <li>Specify privacy and functionality goals</li>
-                        <li>Start security proofs</li>
-                    </ul>
-                    <li>Week 4 (of Mon Dec 13)</li>
-                    <ul>
-                        <li>Implementation details: software</li>
-                    </ul>
-                </ul>
-
-                <br>
-                <h4 id="dec">DECEMBER</h4>
-
-                <p>On December 1st I had another meeting with my mentor. We talked a lot about the design and outlined a quite detailed plan for it. It's all looking quite well so far. I will be learning how to draw in LaTeX and read more on Multi-party
-                    communication (MPC). </p>
+                <div class="project-picture">
+                    <embed src="bot.jpeg" type="image/jpg" width="550px" height="550px">
+                </div>
             </div>
         </div>
     </div>
