--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                 <h3>Veronika Kitsul</h3>
                 <p>
                     Welcome! I am a freshman at <a href="https://www.princeton.edu/"><mark>Princeton University</mark></a>, concentraing in Electrical and Computer Engineering with a focus on Security and Privacy I am an avid researcher and love exploring
-                    everything from Space Race political cartoons to quantum computing.
+                    everything from Space Race political cartoons to quantum computing. I am also pursuing Journalism and Engineering Physics certificates, with my interests lying primarily in investigative data journalism and quantum computing.
                 </p>
                 <p>
-                    Non-academically, I am an animal welfare activist, and led a team of volunteers that developed the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). I lead the team for two years and we suspended our processes at the start of russian invasion of Ukraine. Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist,
-                    and mentor. This past year, I was a co-head mentor leading a group of over 20 Ukrainian students applying to colleges. I enjoy running, playing board games, travelling, and exploring music.
+                    Non-academically, I am an animal welfare activist, and led a team of volunteers that developed the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). I lead the team for two years and we suspended our processes at the start of russian invasion of Ukraine.
+                </p>
+                <p>
+                    Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, and mentor. This past year, I was a co-head mentor leading a group of over 20 Ukrainian students applying to colleges.
                 </p>
                 <p>
                     Feel free to browse through my website to learn more about me!
