--- a/projects.html
+++ b/projects.html
@@ -45,25 +45,6 @@
         </div>
     </div>
 
-    <div class="ul-list-menu-fixed" style="margin-left: 40px; height: 40px">
-        <ul>
-            <li>
-                <a href="#social">
-                    <span>SOCIAL</span>
-                </a>
-            </li>
-            <li>
-                <a href="#cs">
-                    <span>COMPUTER SCIENCE</span>
-                </a>
-            </li>
-            <li>
-                <a href="#arts">
-                    <span>ARTS</span>
-                </a>
-            </li>
-    </div>
-
     <div class="visit-card">
         <div class="media-body">
             <div class="media-body-container">
@@ -74,8 +55,9 @@
                         from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
                         additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
                         If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
-                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I am leading the team of eight teenagers who are excited to work for it for already
-                        1.5 years.
+                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I lead the team of eight teenagers who are excited to work for it for two years,
+                        but we have suspended our processes with the russian invasion of Ukraine. Our service has over 2,000 followers and 500 items in the database.
+
                     </p>
                 </div>
 
@@ -159,42 +141,6 @@
 
                 <div class="project-picture">
                     <embed src="Bouncy.png" type="image/png" width="550px" height="550px">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="visit-card">
-        <div class="media-body">
-            <div class="media-body-container">
-                <div class="project-text" id="arts">
-                    <h4>POETRY COLLECTION</h4>
-                    <p>
-                        I've started writing poetry in Ukrainian when I was seven. I don't allocate a lot of time to work on my pieces, they are usually spontaneous and expressive. I derive my style from Ukrainian poet Yurii Izdryk who writes rhymed stanzas, where scientific
-                        concepts are intertwined with more abstract human feelings. I also have a couple of poems in Russian, and I started writing my pieces in English in 2019. Here I include a sample of my English poems.
-                    </p>
-                </div>
-
-                <div class="project-picture">
-                    <embed src="Poetry_Veronika Kitsul.pdf" type="application/pdf" width="550px" height="450px">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="visit-card">
-        <div class="media-body">
-            <div class="media-body-container">
-                <div class="project-text">
-                    <h4>ELECTRICAL CIRCUITS MUSIC PIECE</h4>
-                    <p>
-                        I have started playing guitar at the beginning of the 2021. Over the summer, I improvized and came up with the chord progression, for which I later wrote lyrics. My guitar teacher at St. Mark's helped me record it and make a coherent piece, adding bass
-                        guitar and drums. It will be on Spotify soon, but for now <b>click anywhere on the picture to hear it!</b>
-                    </p>
-                </div>
-
-                <div class="project-picture">
-                    <a href="https://drive.google.com/file/d/1bn00SkwVXx4wqMMYdsNRR6rSgSYaUu__/view?usp=sharing"><embed src="label.jpg" type="image/jpg" width="550px" height="450px"></a>
                 </div>
             </div>
         </div>
