"link to sanctions"

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         </div>
     </div>
 
+    <div><a href="sanctions.html">Sanctions article</a></div>
+
     <!-- Default Statcounter code for Personal Website
     https://veronika-kitsul.github.io/ -->
     <script type="text/javascript">
