final draft notes

--- a/sanctions.html
+++ b/sanctions.html
@@ -92,6 +92,9 @@
             <p> Indira from Kazan is also studying abroad and have not been back to Russia since the start of the full-scale invasion. Her main issue with sanctions was transferring money, as a lot of the banks are cut off from SWIFT, the international payment
                 system, so she had to find other ways around. Her solution was to just use another bank that is still not cut off from SWIFT; some people she knows have also used cryptocurrency. Her friends also had many issues with withdrawing money
                 from the banking cards produced in Russia. </p>
+            <p>With many companies who withdrew the market, she notes that “it’s not an issue, when you cannot buy this specific product, it’s an issue that you cannot buy it from this specific company.”</p>
+            <p>“I have a friend, who went to Russia over the winter break and she noticed coke in very obviously not the official packages, so it definitely exists,” Indira notes. Vladimir says it’s the Russian company “Dobryy” that started producing coke
+                now, however “most people don’t care whether it’s the original coke or the replaced one, it’s still coke to them.”</p>
         </div>
 
         <div class="sub-header">
